--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
+/* 
 
-/* !* ======== google fonts ======== *! */
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap");
 
-/* !* ======= base style ====== *! */
+
 * {
   margin: 0;
   padding: 0;
@@ -10,7 +10,7 @@
   font-family: "Source Sans Pro", sans-serif;
 }
 
-/* !* ========= pre-define css ========= *! */
+
 h1,
 h2,
 h3,
@@ -47,7 +47,7 @@ ul {
 }
 
 .section__title {
-  /* color: #000d6b; */
+  color: #000d6b; 
   font-weight: 600;
   font-size: 2rem;
 }
@@ -96,4 +96,4 @@ section {
     font-size: 1.1rem;
   }
 }
-
+ */
